@@ -8,6 +8,7 @@ http://sourceforge.net/tracker/?group_id=260863
 
 Open Search Server 1.2
 
+- 2929332: Faceting post collapsing
 - 2900462: Upgrade POI to 3.5 for xlsx and docs support
 - 2900449: Upgrade PDFBox to 0.8
 - 2888788: Upgrade Lucene to release 2.9.x
